; ModuleID = '/home/carl/AnghaBench/h2o/deps/quicly/lib/extr_quicly.c_on_ack_ack.c'
source_filename = "/home/carl/AnghaBench/h2o/deps/quicly/lib/extr_quicly.c_on_ack_ack.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_23__ = type { %struct.TYPE_17__*, %struct.TYPE_16__*, %struct.TYPE_15__* }
%struct.TYPE_17__ = type { %struct.st_quicly_pn_space_t }
%struct.st_quicly_pn_space_t = type { i64, i32, %struct.TYPE_14__ }
%struct.TYPE_14__ = type { i64 }
%struct.TYPE_16__ = type { %struct.st_quicly_pn_space_t }
%struct.TYPE_15__ = type { %struct.st_quicly_pn_space_t }
%struct.TYPE_22__ = type { i32 }
%struct.TYPE_21__ = type { %struct.TYPE_20__ }
%struct.TYPE_20__ = type { %struct.TYPE_19__ }
%struct.TYPE_19__ = type { %struct.TYPE_18__ }
%struct.TYPE_18__ = type { i32, i32 }

@QUICLY_SENTMAP_EVENT_ACKED = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [6 x i8] c"FIXME\00", align 1
@INT64_MAX = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.TYPE_23__*, %struct.TYPE_22__*, %struct.TYPE_21__*, i64)* @on_ack_ack to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @on_ack_ack(%struct.TYPE_23__* %0, %struct.TYPE_22__* %1, %struct.TYPE_21__* %2, i64 %3) #0 {
  %5 = alloca %struct.TYPE_23__*, align 8
  %6 = alloca %struct.TYPE_22__*, align 8
  %7 = alloca %struct.TYPE_21__*, align 8
  %8 = alloca i64, align 8
  %9 = alloca %struct.st_quicly_pn_space_t*, align 8
  store %struct.TYPE_23__* %0, %struct.TYPE_23__** %5, align 8
  store %struct.TYPE_22__* %1, %struct.TYPE_22__** %6, align 8
  store %struct.TYPE_21__* %2, %struct.TYPE_21__** %7, align 8
  store i64 %3, i64* %8, align 8
  %10 = load i64, i64* %8, align 8
  %11 = load i64, i64* @QUICLY_SENTMAP_EVENT_ACKED, align 8
  %12 = icmp eq i64 %10, %11
  br i1 %12, label %13, label %66

13:                                               ; preds = %4
  %14 = load %struct.TYPE_22__*, %struct.TYPE_22__** %6, align 8
  %15 = getelementptr inbounds %struct.TYPE_22__, %struct.TYPE_22__* %14, i32 0, i32 0
  %16 = load i32, i32* %15, align 4
  switch i32 %16, label %32 [
    i32 128, label %17
    i32 129, label %22
    i32 130, label %27
  ]

17:                                               ; preds = %13
  %18 = load %struct.TYPE_23__*, %struct.TYPE_23__** %5, align 8
  %19 = getelementptr inbounds %struct.TYPE_23__, %struct.TYPE_23__* %18, i32 0, i32 2
  %20 = load %struct.TYPE_15__*, %struct.TYPE_15__** %19, align 8
  %21 = getelementptr inbounds %struct.TYPE_15__, %struct.TYPE_15__* %20, i32 0, i32 0
  store %struct.st_quicly_pn_space_t* %21, %struct.st_quicly_pn_space_t** %9, align 8
  br label %34

22:                                               ; preds = %13
  %23 = load %struct.TYPE_23__*, %struct.TYPE_23__** %5, align 8
  %24 = getelementptr inbounds %struct.TYPE_23__, %struct.TYPE_23__* %23, i32 0, i32 1
  %25 = load %struct.TYPE_16__*, %struct.TYPE_16__** %24, align 8
  %26 = getelementptr inbounds %struct.TYPE_16__, %struct.TYPE_16__* %25, i32 0, i32 0
  store %struct.st_quicly_pn_space_t* %26, %struct.st_quicly_pn_space_t** %9, align 8
  br label %34

27:                                               ; preds = %13
  %28 = load %struct.TYPE_23__*, %struct.TYPE_23__** %5, align 8
  %29 = getelementptr inbounds %struct.TYPE_23__, %struct.TYPE_23__* %28, i32 0, i32 0
  %30 = load %struct.TYPE_17__*, %struct.TYPE_17__** %29, align 8
  %31 = getelementptr inbounds %struct.TYPE_17__, %struct.TYPE_17__* %30, i32 0, i32 0
  store %struct.st_quicly_pn_space_t* %31, %struct.st_quicly_pn_space_t** %9, align 8
  br label %34

32:                                               ; preds = %13
  %33 = call i32 @assert(i32 0)
  br label %34

34:                                               ; preds = %32, %27, %22, %17
  %35 = load %struct.st_quicly_pn_space_t*, %struct.st_quicly_pn_space_t** %9, align 8
  %36 = icmp ne %struct.st_quicly_pn_space_t* %35, null
  br i1 %36, label %37, label %65

37:                                               ; preds = %34
  %38 = load %struct.st_quicly_pn_space_t*, %struct.st_quicly_pn_space_t** %9, align 8
  %39 = getelementptr inbounds %struct.st_quicly_pn_space_t, %struct.st_quicly_pn_space_t* %38, i32 0, i32 2
  %40 = load %struct.TYPE_21__*, %struct.TYPE_21__** %7, align 8
  %41 = getelementptr inbounds %struct.TYPE_21__, %struct.TYPE_21__* %40, i32 0, i32 0
  %42 = getelementptr inbounds %struct.TYPE_20__, %struct.TYPE_20__* %41, i32 0, i32 0
  %43 = getelementptr inbounds %struct.TYPE_19__, %struct.TYPE_19__* %42, i32 0, i32 0
  %44 = getelementptr inbounds %struct.TYPE_18__, %struct.TYPE_18__* %43, i32 0, i32 1
  %45 = load i32, i32* %44, align 4
  %46 = load %struct.TYPE_21__*, %struct.TYPE_21__** %7, align 8
  %47 = getelementptr inbounds %struct.TYPE_21__, %struct.TYPE_21__* %46, i32 0, i32 0
  %48 = getelementptr inbounds %struct.TYPE_20__, %struct.TYPE_20__* %47, i32 0, i32 0
  %49 = getelementptr inbounds %struct.TYPE_19__, %struct.TYPE_19__* %48, i32 0, i32 0
  %50 = getelementptr inbounds %struct.TYPE_18__, %struct.TYPE_18__* %49, i32 0, i32 0
  %51 = load i32, i32* %50, align 4
  %52 = call i32 @quicly_ranges_subtract(%struct.TYPE_14__* %39, i32 %45, i32 %51)
  %53 = load %struct.st_quicly_pn_space_t*, %struct.st_quicly_pn_space_t** %9, align 8
  %54 = getelementptr inbounds %struct.st_quicly_pn_space_t, %struct.st_quicly_pn_space_t* %53, i32 0, i32 2
  %55 = getelementptr inbounds %struct.TYPE_14__, %struct.TYPE_14__* %54, i32 0, i32 0
  %56 = load i64, i64* %55, align 8
  %57 = icmp eq i64 %56, 0
  br i1 %57, label %58, label %64

58:                                               ; preds = %37
  %59 = load i32, i32* @INT64_MAX, align 4
  %60 = load %struct.st_quicly_pn_space_t*, %struct.st_quicly_pn_space_t** %9, align 8
  %61 = getelementptr inbounds %struct.st_quicly_pn_space_t, %struct.st_quicly_pn_space_t* %60, i32 0, i32 1
  store i32 %59, i32* %61, align 8
  %62 = load %struct.st_quicly_pn_space_t*, %struct.st_quicly_pn_space_t** %9, align 8
  %63 = getelementptr inbounds %struct.st_quicly_pn_space_t, %struct.st_quicly_pn_space_t* %62, i32 0, i32 0
  store i64 0, i64* %63, align 8
  br label %64

64:                                               ; preds = %58, %37
  br label %65

65:                                               ; preds = %64, %34
  br label %66

66:                                               ; preds = %65, %4
  ret i32 0
}

declare dso_local i32 @assert(i32) #1

declare dso_local i32 @quicly_ranges_subtract(%struct.TYPE_14__*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
